# fitme

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: data.rs  lib.rs  main.rs  solve.rs
src/expr/: mod.rs  v1.rs
tests/: cli-err.rs  cli-output.rs  file1.csv  file2.csv
