[package]
name = "fitme"
version = "0.1.1"
edition = "2021"
authors = ["Kurt Lawrence <kurtlawrence.info>"]
description = "CLI curve fitting tool. Parameterise an equation from a CSV dataset."
license = "MIT"
repository = "https://github.com/kdr-aus/fitme"
keywords = ["cli", "regression", "curve-fitting"]
categories = ["command-line-utilities", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "6"
csv = "1"
meval = "0.2"
miette = { version = "5", features = ["fancy"] }
numfmt = "1"
rmpfit = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simsearch = "0.2"

[dev-dependencies]
assert_cmd = "2"
fastrand = "1"
